# update-broker

./: .gitignore  .travis.yml  COPYING  Cargo.toml  README.md  Vagrantfile  azure-pipelines.yml  build.rs  playbook.yml
assets/: com.futuretv-group.UpdateBroker.conf  update-broker.service
c-wrap/: lib.cpp
control/: postinst  postrm  prerm
src/: apt.rs  cli.yaml  main.rs  server.rs  update_status.rs
