[package]
name = "update-broker"
version = "1.0.0"
description = "A reboot required notification daemon"
authors = ["Niels Grewe <niels.grewe@halbordnung.de>"]
license = "MIT"

[dependencies]
clap = {version = "~2.28", features = ["yaml"]}
mio = "~0.6.11"
libc = "*"
slog = "^2"
slog-async = "^2"
slog-term = "^2"
slog-journald = "^2"
dbus-tokio = "~0.2.0"
dbus = "*"
futures = "~0.1.17"
inotify = "*"
tokio-core = "*"
tokio-inotify = "~0.3.0"
tokio-signal = "~0.1.2"
tokio-timer = "~0.1.2"

[package.metadata.deb]
maintainer = "Niels Grewe <niels.grewe@halbordnung.de>"
copyright = "2017, FutureTV Production GmbH"
depends = "$auto, systemd, dbus"
extended-description = """\
The update broker is a service that monitors /var/run/reboot-required \
and implements the com.coreos.update1 D-Bus interface in order to \
inform the locksmithd cluster reboot manager about when to reboot \
a machine"""
section = "admin"
priority = "optional"
maintainer-scripts = "control/"
assets = [
    ["assets/update-broker.service", "lib/systemd/system/update-broker.service", "644"],
    ["assets/com.futuretv-group.UpdateBroker.conf", "etc/dbus-1/system.d/com.futuretv-group.UpdateBroker.conf", "644"],
    ["target/release/update-broker", "usr/sbin/update-broker", "755"]
]
